force-app/main/default/objects/Commission_Detail__c/Commission_Detail__c.object-meta.xml
<CustomObject>
    <description>No SOX Impact - No Permissions to be provided on this Object as it is not in use</description>
    <label>(Deprecated) Commission Detail NOV</label>
    <nameField>
        <displayFormat>CD-{000}</displayFormat>
        <label>Comp Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>(Deprecated) Commission Details</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>