force-app/main/default/objects/Commission_Detail__c/fields/Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Commission_Amount__c</fullName>
    <description>Commission Amount</description>
    <inlineHelpText>Commission Amount</inlineHelpText>
    <label>Commission Amount</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>