force-app/main/default/objects/Commission_Detail__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <description>Customer Name</description>
    <inlineHelpText>Customer Name</inlineHelpText>
    <label>Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>