force-app/main/default/objects/Commission_Detail__c/fields/Participant_Employee_Id__c.field-meta.xml
<CustomField>
    <fullName>Participant_Employee_Id__c</fullName>
    <description>Participant Employee Id</description>
    <inlineHelpText>Participant Employee Id</inlineHelpText>
    <label>Participant Employee Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>