force-app/main/default/objects/Commission_Detail__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <description>Rate</description>
    <inlineHelpText>Rate</inlineHelpText>
    <label>Rate</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Percent</type>
</CustomField>