force-app/main/default/objects/Commission_Detail__c/fields/Sub_Region__c.field-meta.xml
<CustomField>
    <fullName>Sub_Region__c</fullName>
    <description>Sub Region</description>
    <inlineHelpText>Sub Region</inlineHelpText>
    <label>Sub Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>