force-app/main/default/objects/Commission_Detail__c/fields/Tier_Value__c.field-meta.xml
<CustomField>
    <fullName>Tier_Value__c</fullName>
    <description>Tier Value</description>
    <inlineHelpText>Tier Value</inlineHelpText>
    <label>Tier Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>