force-app/main/default/objects/Commission_Detail__c/fields/Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type__c</fullName>
    <description>Unit Type</description>
    <inlineHelpText>Unit Type</inlineHelpText>
    <label>Unit Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>